ignoring the warnings

--- a/notebooks/Example-notebook.ipynb
+++ b/notebooks/Example-notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,13 @@
     "mpl.rcParams['ytick.labelsize'] = 25\n",
     "\n",
     "from astropy.convolution import convolve, Box2DKernel, Gaussian2DKernel\n",
-    "from astropy.io import fits\n"
+    "from astropy.io import fits\n",
+    "\n",
+    "import warnings\n",
+    "with warnings.catch_warnings():\n",
+    "    warnings.simplefilter(\"ignore\", category=DeprecationWarning)\n",
+    "    \n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
