--- a/notebooks/Example-notebook.ipynb
+++ b/notebooks/Example-notebook.ipynb
@@ -669,7 +669,7 @@
     "CC = CubeCarve(cube,9,pointsources,xpixelsize=1,ypixelsize=1)\n",
     "# # make psf cube\n",
     "index = np.array([203])\n",
-    "CC.build_psf_cube(deactivate,200,5,5,index)\n",
+    "CC.build_psf_cube(deactivate,200,5,5,index) # 1\n",
     "CC.run(800,10,sigma=2)"
    ]
   },
