added warning comment

--- a/notebooks/Example-notebook.ipynb
+++ b/notebooks/Example-notebook.ipynb
@@ -387,7 +387,7 @@
    "source": [
     "# Now run CubeCarve again\n",
     "# it will automatically run on the new index array :)\n",
-    "\n",
+    "# WARNING: This may take ~ 2 minutes to run on your machine\n",
     "Nsteps = 800\n",
     "Rsize = 6\n",
     "sigma = 1.1\n",
